--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -17,4 +17,11 @@
     justify-content: flex-start;
     transition: left 1s;
   }
+
+  // .selected-image img{
+  //   box-sizing:border-box;
+  //   border: blue solid 5px
+  // }
+
+
 }
