finished carousel delete functionality

--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -18,7 +18,7 @@
     transition: left 1s;
   }
 
-  // .selected-image img{
+  // .selected-image{
   //   box-sizing:border-box;
   //   border: blue solid 5px
   // }
