--- a/src/components/carousel/CarouselSlot.scss
+++ b/src/components/carousel/CarouselSlot.scss
@@ -1,7 +1,18 @@
 .carousel-slot {
+  position: relative;
+
   .selected-image{
     box-sizing:border-box;
     border: blue solid 5px
+  }
+
+  .image-caption{
+    width: 100%;
+    font-weight: bold;
+    position: absolute;
+    bottom: 10px;
+    margin: 0;
+    padding: 0;
   }
 }
 
