--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -1,7 +1,7 @@
 .carousel{
   border: black solid 1px;
   width: 500px;
-  height: 500px;
+  height: 400px;
   margin: 0 auto;
 
   .view-container{
@@ -35,5 +35,9 @@
         margin-left: 10px;
       }
     }
+  }
+
+  .carousel-dots{
+    
   }
 }
