--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -38,6 +38,23 @@
   }
 
   .carousel-dots{
-    
+    display:flex;
+    justify-content: space-around;
+    padding: 5px;
+    background-color: lightpink;
+
+    .dot{
+      background-color: gray;
+      border-radius: 100%;
+      width: 10px;
+      height: 10px;
+      border: solid gray 1px;
+
+      &.active-dot{
+        background-color: white;
+      }
+    }
+
+
   }
 }
