--- a/src/components/ImageSelector/ImageSelector.scss
+++ b/src/components/ImageSelector/ImageSelector.scss
@@ -1,21 +1,23 @@
 .image-selector{
   margin: 0 auto;
-  width: 1000px;
-  background-color: lavender;
-  // display: grid;
-  // grid-template-rows: 100px 100px;
+  width: 400px;
+  min-height: 650px;
+  // background-color: lightsteelblue;
+  border: solid lightgray 1px;
+  border-radius: 2%;
+  padding: 20px;
+  position: relative;
 
-  // img{
-  //   width: 100px;
-  //   height: 100px;
-  // }
-  // .selected-image{
-  //   box-sizing:border-box;
-  //   border: blue solid 5px;
-  // }
   .images-grid{
-    min-height: 200px;
     display: grid;
-    grid-template-columns: repeat(10, 100px);
+    grid-template-columns: repeat(4, 100px);
+  }
+
+  .addBtn {
+    position: absolute;
+    bottom: 5px;
+    background-color:#44c767;
+    border:1px solid #18ab29;
+    text-shadow:0px 1px 0px #2f6627;
   }
 }
