--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -1,11 +1,14 @@
+$base-color: rgb(9, 100, 169);
+
 .carousel{
-  border: black solid 1px;
+  border: lightgray solid 1px;
   width: 500px;
-  height: 400px;
+  height: 370px;
   margin: 0 auto;
+  position: relative;
 
   .view-container{
-    background-color: black;
+    background-color: gray;
     width: 500px;
     margin: 0 auto;
     overflow: hidden;
@@ -18,8 +21,18 @@
     transition: left 1s;
   }
 
+  .mode-selector{
+    font-size: 30px;
+    font-weight: bold;
+
+    .react-toggle{
+      margin: 15px 0 0;
+    }
+  }
+
   .carousel-controls{
-    background-color: cadetblue;
+    color: white;
+    background-color: $base-color;
     display: flex;
     justify-content: space-around;
 
@@ -30,6 +43,7 @@
     }
   
     .items-selector{
+      margin: 18px 0 0;
       select{
         width: 100px;
         margin-left: 10px;
@@ -41,20 +55,39 @@
     display:flex;
     justify-content: space-around;
     padding: 5px;
-    background-color: lightpink;
+    background-color: $base-color;
 
     .dot{
       background-color: gray;
       border-radius: 100%;
       width: 10px;
       height: 10px;
-      border: solid gray 1px;
 
       &.active-dot{
         background-color: white;
       }
     }
+  }
 
+  .pag-buttons{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 5px;
 
+    button{
+      width: 100px;
+      height: 20px;
+      background-color: rgb(12, 216, 230);
+    }
+
+  }
+
+  .deleteBtn{
+    position: absolute;
+    left: 190px;
+    margin-top: 5px;
+    background-color:#ef3b3b;
+    border:1px solid #ab1818;
+    text-shadow:0px 1px 0px #662727;
   }
 }
