--- a/src/components/ImageSelector/ImageSelector.scss
+++ b/src/components/ImageSelector/ImageSelector.scss
@@ -2,7 +2,6 @@
   margin: 0 auto;
   width: 400px;
   min-height: 650px;
-  // background-color: lightsteelblue;
   border: solid lightgray 1px;
   border-radius: 2%;
   padding: 20px;
@@ -15,6 +14,7 @@
 
   .addBtn {
     position: absolute;
+    left: 170px;
     bottom: 5px;
     background-color:#44c767;
     border:1px solid #18ab29;
